@@ -1,6 +1,6 @@
-/**
+/*
  * The MIT License
- * Copyright (c) 2014-2016 Ilkka Seppälä
+ * Copyright © 2014-2019 Ilkka Seppälä
  *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
@@ -20,16 +20,17 @@
  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  * THE SOFTWARE.
  */
+
 package com.iluwatar.callback;
 
-import org.junit.jupiter.api.Test;
-
 import static org.junit.jupiter.api.Assertions.assertEquals;
+
+import org.junit.jupiter.api.Test;
 
 /**
  * Add a field as a counter. Every time the callback method is called increment this field. Unit
  * test checks that the field is being incremented.
- *
+ * <p>
  * Could be done with mock objects as well where the call method call is verified.
  */
 public class CallbackTest {
@@ -40,17 +41,17 @@ public class CallbackTest {
   public void test() {
     Callback callback = () -> callingCount++;
 
-    Task task = new SimpleTask();
+    var task = new SimpleTask();
 
-    assertEquals(new Integer(0), callingCount, "Initial calling count of 0");
-
-    task.executeWith(callback);
-
-    assertEquals(new Integer(1), callingCount, "Callback called once");
+    assertEquals(Integer.valueOf(0), callingCount, "Initial calling count of 0");
 
     task.executeWith(callback);
 
-    assertEquals(new Integer(2), callingCount, "Callback called twice");
+    assertEquals(Integer.valueOf(1), callingCount, "Callback called once");
+
+    task.executeWith(callback);
+
+    assertEquals(Integer.valueOf(2), callingCount, "Callback called twice");
 
   }
 }
