@@ -1,6 +1,6 @@
-/**
+/*
  * The MIT License
- * Copyright (c) 2014 Ilkka Seppälä
+ * Copyright © 2014-2019 Ilkka Seppälä
  *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
@@ -20,9 +20,9 @@
  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  * THE SOFTWARE.
  */
+
 package com.iluwatar.collectionpipeline;
 
-import java.util.Arrays;
 import java.util.List;
 
 /**
@@ -34,10 +34,11 @@ public class CarFactory {
 
   /**
    * Factory method to create a {@link List} of {@link Car} instances.
+   *
    * @return {@link List} of {@link Car}
    */
   public static List<Car> createCars() {
-    return Arrays.asList(new Car("Jeep", "Wrangler", 2011, Category.JEEP),
+    return List.of(new Car("Jeep", "Wrangler", 2011, Category.JEEP),
         new Car("Jeep", "Comanche", 1990, Category.JEEP),
         new Car("Dodge", "Avenger", 2010, Category.SEDAN),
         new Car("Buick", "Cascada", 2016, Category.CONVERTIBLE),
