@@ -1,6 +1,6 @@
-/**
+/*
  * The MIT License
- * Copyright (c) 2014-2016 Ilkka Seppälä
+ * Copyright © 2014-2019 Ilkka Seppälä
  *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
@@ -20,17 +20,14 @@
  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  * THE SOFTWARE.
  */
+
 package com.iluwatar.hexagonal.domain;
 
 import org.junit.jupiter.api.Test;
 
-import java.util.Arrays;
-import java.util.HashSet;
+import java.util.Set;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertNotEquals;
-import static org.junit.jupiter.api.Assertions.assertThrows;
-import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.api.Assertions.*;
 
 /**
  * 
@@ -41,8 +38,7 @@ class LotteryNumbersTest {
   
   @Test
   void testGivenNumbers() {
-    LotteryNumbers numbers = LotteryNumbers.create(
-            new HashSet<>(Arrays.asList(1, 2, 3, 4)));
+    LotteryNumbers numbers = LotteryNumbers.create(Set.of(1, 2, 3, 4));
     assertEquals(numbers.getNumbers().size(), 4);
     assertTrue(numbers.getNumbers().contains(1));
     assertTrue(numbers.getNumbers().contains(2));
@@ -52,8 +48,7 @@ class LotteryNumbersTest {
   
   @Test
   void testNumbersCantBeModified() {
-    LotteryNumbers numbers = LotteryNumbers.create(
-            new HashSet<>(Arrays.asList(1, 2, 3, 4)));
+    LotteryNumbers numbers = LotteryNumbers.create(Set.of(1, 2, 3, 4));
     assertThrows(UnsupportedOperationException.class, () -> numbers.getNumbers().add(5));
   }
   
@@ -65,13 +60,10 @@ class LotteryNumbersTest {
   
   @Test
   void testEquals() {
-    LotteryNumbers numbers1 = LotteryNumbers.create(
-            new HashSet<>(Arrays.asList(1, 2, 3, 4)));
-    LotteryNumbers numbers2 = LotteryNumbers.create(
-            new HashSet<>(Arrays.asList(1, 2, 3, 4)));
+    LotteryNumbers numbers1 = LotteryNumbers.create(Set.of(1, 2, 3, 4));
+    LotteryNumbers numbers2 = LotteryNumbers.create(Set.of(1, 2, 3, 4));
     assertEquals(numbers1, numbers2);
-    LotteryNumbers numbers3 = LotteryNumbers.create(
-            new HashSet<>(Arrays.asList(11, 12, 13, 14)));
+    LotteryNumbers numbers3 = LotteryNumbers.create(Set.of(11, 12, 13, 14));
     assertNotEquals(numbers1, numbers3);
   }
 }
