@@ -1,6 +1,6 @@
-/**
+/*
  * The MIT License
- * Copyright (c) 2014-2016 Ilkka Seppälä
+ * Copyright © 2014-2019 Ilkka Seppälä
  *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
@@ -20,18 +20,16 @@
  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  * THE SOFTWARE.
  */
+
 package com.iluwatar.prototype;
 
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.MethodSource;
 
-import java.util.Arrays;
 import java.util.Collection;
+import java.util.List;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertNotNull;
-import static org.junit.jupiter.api.Assertions.assertNotSame;
-import static org.junit.jupiter.api.Assertions.assertSame;
+import static org.junit.jupiter.api.Assertions.*;
 
 /**
  * Date: 12/28/15 - 8:45 PM
@@ -40,7 +38,7 @@ import static org.junit.jupiter.api.Assertions.assertSame;
  */
 public class PrototypeTest<P extends Prototype> {
   static Collection<Object[]> dataProvider() {
-    return Arrays.asList(
+    return List.of(
             new Object[]{new OrcBeast("axe"), "Orcish wolf attacks with axe"},
             new Object[]{new OrcMage("sword"), "Orcish mage attacks with sword"},
             new Object[]{new OrcWarlord("laser"), "Orcish warlord attacks with laser"},
@@ -59,6 +57,7 @@ public class PrototypeTest<P extends Prototype> {
     assertNotNull(clone);
     assertNotSame(clone, testedPrototype);
     assertSame(testedPrototype.getClass(), clone.getClass());
+    assertEquals(clone, testedPrototype);
   }
 
 }
