@@ -1,6 +1,6 @@
-/**
+/*
  * The MIT License
- * Copyright (c) 2014-2016 Ilkka Seppälä
+ * Copyright © 2014-2019 Ilkka Seppälä
  *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
@@ -20,11 +20,8 @@
  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  * THE SOFTWARE.
  */
-package com.iluwatar.specification.app;
 
-import java.util.Arrays;
-import java.util.List;
-import java.util.stream.Collectors;
+package com.iluwatar.specification.app;
 
 import com.iluwatar.specification.creature.Creature;
 import com.iluwatar.specification.creature.Dragon;
@@ -35,36 +32,41 @@ import com.iluwatar.specification.creature.Shark;
 import com.iluwatar.specification.creature.Troll;
 import com.iluwatar.specification.property.Color;
 import com.iluwatar.specification.property.Movement;
+import com.iluwatar.specification.selector.AbstractSelector;
 import com.iluwatar.specification.selector.ColorSelector;
+import com.iluwatar.specification.selector.MassEqualSelector;
+import com.iluwatar.specification.selector.MassGreaterThanSelector;
+import com.iluwatar.specification.selector.MassSmallerThanOrEqSelector;
 import com.iluwatar.specification.selector.MovementSelector;
+import java.util.List;
+import java.util.stream.Collectors;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 /**
- * 
- * The central idea of the Specification pattern is to separate the statement of how to match a
+ * <p>The central idea of the Specification pattern is to separate the statement of how to match a
  * candidate, from the candidate object that it is matched against. As well as its usefulness in
- * selection, it is also valuable for validation and for building to order.
- * <p>
- * In this example we have a pool of creatures with different properties. We then have defined
- * separate selection rules (Specifications) that we apply to the collection and as output receive
- * only the creatures that match the selection criteria.
- * <p>
- * http://martinfowler.com/apsupp/spec.pdf
+ * selection, it is also valuable for validation and for building to order.</p>
  *
+ * <p>In this example we have a pool of creatures with different properties. We then have defined
+ * separate selection rules (Specifications) that we apply to the collection and as output receive
+ * only the creatures that match the selection criteria.</p>
+ *
+ * <p>http://martinfowler.com/apsupp/spec.pdf</p>
  */
 public class App {
-  
+
   private static final Logger LOGGER = LoggerFactory.getLogger(App.class);
 
   /**
-   * Program entry point
+   * Program entry point.
    */
   public static void main(String[] args) {
     // initialize creatures list
-    List<Creature> creatures =
-        Arrays.asList(new Goblin(), new Octopus(), new Dragon(), new Shark(), new Troll(),
-            new KillerBee());
+    List<Creature> creatures = List.of(new Goblin(), new Octopus(), new Dragon(), new Shark(),
+        new Troll(), new KillerBee());
+    // so-called "hard-coded" specification
+    LOGGER.info("Demonstrating hard-coded specification :");
     // find all walking creatures
     LOGGER.info("Find all walking creatures");
     List<Creature> walkingCreatures =
@@ -76,6 +78,26 @@ public class App {
     List<Creature> darkCreatures =
         creatures.stream().filter(new ColorSelector(Color.DARK)).collect(Collectors.toList());
     darkCreatures.forEach(c -> LOGGER.info(c.toString()));
+
+    LOGGER.info("\n");
+    // so-called "parameterized" specification
+    LOGGER.info("Demonstrating parameterized specification :");
+    // find all creatures heavier than 500kg
+    LOGGER.info("Find all creatures heavier than 600kg");
+    List<Creature> heavyCreatures =
+        creatures.stream().filter(new MassGreaterThanSelector(600.0))
+            .collect(Collectors.toList());
+    heavyCreatures.forEach(c -> LOGGER.info(c.toString()));
+    // find all creatures heavier than 500kg
+    LOGGER.info("Find all creatures lighter than or weighing exactly 500kg");
+    List<Creature> lightCreatures =
+        creatures.stream().filter(new MassSmallerThanOrEqSelector(500.0))
+            .collect(Collectors.toList());
+    lightCreatures.forEach(c -> LOGGER.info(c.toString()));
+
+    LOGGER.info("\n");
+    // so-called "composite" specification
+    LOGGER.info("Demonstrating composite specification :");
     // find all red and flying creatures
     LOGGER.info("Find all red and flying creatures");
     List<Creature> redAndFlyingCreatures =
@@ -83,5 +105,15 @@ public class App {
             .filter(new ColorSelector(Color.RED).and(new MovementSelector(Movement.FLYING)))
             .collect(Collectors.toList());
     redAndFlyingCreatures.forEach(c -> LOGGER.info(c.toString()));
+    // find all creatures dark or red, non-swimming, and heavier than or equal to 400kg
+    LOGGER.info("Find all scary creatures");
+    AbstractSelector<Creature> scaryCreaturesSelector = new ColorSelector(Color.DARK)
+        .or(new ColorSelector(Color.RED)).and(new MovementSelector(Movement.SWIMMING).not())
+        .and(new MassGreaterThanSelector(400.0).or(new MassEqualSelector(400.0)));
+    List<Creature> scaryCreatures =
+        creatures.stream()
+            .filter(scaryCreaturesSelector)
+            .collect(Collectors.toList());
+    scaryCreatures.forEach(c -> LOGGER.info(c.toString()));
   }
 }
